// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurvedElementEnlarged renders with default values 1`] = `
<body>
  <div>
    <path
      d="M 1,0 A 1,1 0 0 1 0,1 V 2 H 1 A 1,1 0 0 0 2,1 V 0 Z"
    />
  </div>
</body>
`;

exports[`CurvedElementEnlarged renders with the given parameters 1`] = `
<body>
  <div>
    <path
      d="M 150,150 A 50,50 0 0 1 100,200 V 280 H 160 A 70,70 0 0 0 230,210 V 150 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedElementEnlarged updates when the parameter cx is modified 1`] = `
<body>
  <div>
    <path
      d="M 90,150 A 50,50 0 0 1 40,200 V 280 H 100 A 70,70 0 0 0 170,210 V 150 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedElementEnlarged updates when the parameter cy is modified 1`] = `
<body>
  <div>
    <path
      d="M 150,40 A 50,50 0 0 1 100,90 V 170 H 160 A 70,70 0 0 0 230,100 V 40 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedElementEnlarged updates when the parameter d is modified 1`] = `
<body>
  <div>
    <path
      d="M 140,140 A 50,50 0 0 1 90,190 V 290 H 160 A 80,80 0 0 0 240,210 V 140 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedElementEnlarged updates when the parameter fill is modified 1`] = `
<body>
  <div>
    <path
      d="M 150,150 A 50,50 0 0 1 100,200 V 280 H 160 A 70,70 0 0 0 230,210 V 150 Z"
      fill="blue"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedElementEnlarged updates when the parameter radius is modified 1`] = `
<body>
  <div>
    <path
      d="M 140,150 A 40,40 0 0 1 100,190 V 270 H 160 A 60,60 0 0 0 220,210 V 150 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedElementEnlarged updates when the parameter side is modified 1`] = `
<body>
  <div>
    <path
      d="M 150,150 A 50,50 0 0 1 100,200 V 240 H 160 A 30,30 0 0 0 190,210 V 150 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedElementEnlarged updates when the parameter stroke is modified 1`] = `
<body>
  <div>
    <path
      d="M 150,150 A 50,50 0 0 1 100,200 V 280 H 160 A 70,70 0 0 0 230,210 V 150 Z"
      fill="red"
      stroke="blue"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedElementEnlarged updates when the parameter stroke-width is modified 1`] = `
<body>
  <div>
    <path
      d="M 150,150 A 50,50 0 0 1 100,200 V 280 H 160 A 70,70 0 0 0 230,210 V 150 Z"
      fill="red"
      stroke-width="3"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedElementEnlarged updates when the parameter transform is modified 1`] = `
<body>
  <div>
    <path
      d="M 150,150 A 50,50 0 0 1 100,200 V 280 H 160 A 70,70 0 0 0 230,210 V 150 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(180)"
    />
  </div>
</body>
`;

exports[`CurvedElementEnlarged updates when the parameter width is modified 1`] = `
<body>
  <div>
    <path
      d="M 150,150 A 50,50 0 0 1 100,200 V 240 H 160 A 30,30 0 0 0 190,210 V 150 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;
